[Fix] max-height on card / overflow on main

--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,6 @@ span {
 .card {
   width: calc(100% / 6);
   min-height: 300px;
-  max-height: 300px;
   padding: 0 20px ;
 }
 
@@ -83,7 +82,6 @@ span {
 main {
   height: calc(100vh - 10vh);
   background-color: var(--main-background);
-  overflow-y: auto;
   position: relative;
 }
 
